// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="bmds-select"
  >
    <button
      aria-controls="bmds-select-list"
      aria-haspopup="true"
      class="bmds-select__label"
      data-testid="BmdsSelectButton"
      tabindex="0"
    >
      <p
        class="bmds-text bmds-text-md"
      >
        Select an option...
      </p>
      <svg
        class="bmds-select__caret bmds-select__caret--closed"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu open state 1`] = `
<DocumentFragment>
  <div
    class="bmds-select"
  >
    <button
      aria-controls="bmds-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="bmds-select__label"
      data-testid="BmdsSelectButton"
      tabindex="0"
    >
      <p
        class="bmds-text bmds-text-md"
      >
        Select an option...
      </p>
      <svg
        class="bmds-select__caret bmds-select__caret--open"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
    <ul
      class="bmds-select__overlay"
      id="bmds-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-label="Strict Black"
        class="bmds-select__option
                  
                  
                "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="bmds-text bmds-text-md"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-label="Black Lagoon"
        class="bmds-select__option
                  
                  
                "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="bmds-text bmds-text-md"
        >
          Black Lagoon
        </p>
      </li>
      <li
        aria-label="Sirius Black"
        class="bmds-select__option
                  
                  
                "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="bmds-text bmds-text-md"
        >
          Sirius Black
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="bmds-select"
  >
    <button
      aria-controls="bmds-select-list"
      aria-haspopup="true"
      class="bmds-select__label"
      data-testid="BmdsSelectButton"
      tabindex="0"
    >
      <p
        class="bmds-text bmds-text-md"
      >
        Strict Black
      </p>
      <svg
        class="bmds-select__caret bmds-select__caret--closed"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
